--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -1,6 +1,6 @@
 <%# Follow Us - list of social media %>
 <% if social_media.present? %>
-  <ul class="grid grid--mrg-base-non-palm txt-formatted__list-unstyled">
+  <ul class="grid grid--mrg-base-non-palm">
     <%# Facebook %>
     <% if @centre.facebook.present? %>
       <li class="grid__item one-half non-palm-one-quarter">
