Refactored choosing whether we should show T&C's or not.

--- a/app/views/centre_info/_parking_terms_and_conditions.html.erb
+++ b/app/views/centre_info/_parking_terms_and_conditions.html.erb
@@ -3,7 +3,7 @@
   <% if @parking.credit_card_surcharge_amount.to_i > 0 %>
     <%= @parking.credit_card_surcharge_amount %>% surcharge on all credit card payments
   <% end %>
-  <% if @parking.pdf_ref and !@parking.pdf_ref.empty? %>
+  <% if @parking.pdf_ref.present? %>
     parking <%= link_to 'terms &amp; conditions apply'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: '_blank', class:"test-terms-link" %>.
   <% end %>
 </small>
