--- a/app/views/centre_info/_parking_complimentary.html.erb
+++ b/app/views/centre_info/_parking_complimentary.html.erb
@@ -1,7 +1,7 @@
 <div class="grid grid--gutter-dbl grid--mrg-dbl-non-palm">
   <div class="grid__item non-palm-one-half">
     <p>Complimentary parking available for all customers.</p>
-    <% if @parking.pdf_ref and !@parking.pdf_ref.empty? %>
+    <% if @parking.pdf_ref.present? %>
       <small class="fine-print">Parking <%= link_to 'terms &amp; conditions'.html_safe, cl_image_path(@parking.pdf_ref, format:'pdf'), target: "_blank" %> apply</small>
     <% end %>
   </div>
