WSF-5663: Added no-content-fallback-msg extender

--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -55,3 +55,8 @@
     /* 'See nearby centres' text */
     p > span {color: $color-dark-txt;}
 }
+
+/* --Extenders-- */
+
+/* Remove top padding */
+.no-content-fallback-msg--flush {padding-top: 0;}
