--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <% if @movie_sessions.empty? %>
 
   <%# No Movies fallback message %>
-  <div class="no-content-fallback-msg">
+  <div class="no-content-fallback-msg no-content-fallback-msg--flush">
     <span class="icon icon--video icon--flush-top" aria-hidden="true"></span>
     <p><em class="h1">No movies at this centre</em></p>
   </div>
