--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -32,7 +32,7 @@
 
     <%# List of movies %>
     <%# @movies.in_groups_of(4, false) do |movies|%>
-      <ul class="grid test-movies">
+      <ul class="grid grid--gutter-half grid--mrg-half grid--non-linear test-movies">
         <% @movies.each do |movie| %>
           <li class="grid__item one-half lap-sml-one-third non-palm-one-quarter">
 
