--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -41,8 +41,8 @@
   }
 }
 
-/* Box with small margin bottom */
+/* Small margin bottom */
 .box--mrg-half {@include to-rem(margin-bottom, $spacing-half);}
 
-/* Box with `position: relative`. Used for positioing the preloader in the middle */
+/* Position relative  */
 .box--position {position: relative;}
