--- a/app/assets/stylesheets/partials/abstractions/_divider.scss
+++ b/app/assets/stylesheets/partials/abstractions/_divider.scss
@@ -22,5 +22,13 @@
 /* Larger spacing */
 .divider--lrg {@include to-rem(padding-bottom margin-bottom, $spacing-dbl);}
 
+/* Larger spacing at non-palm */
+@include respond-min($non-palm) {
+  .divider--lrg-non-palm {
+    @include to-rem(padding-bottom, $spacing-dbl);
+    @include to-rem(margin-bottom, $spacing-dbl);
+  }
+}
+
 /* Smaller spacing */
 .divider--sml {@include to-rem(padding-bottom margin-bottom, $spacing-half);}
