--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -20,12 +20,12 @@
             <h2 class="search-results__hdr">Search results</h2>
             <ul class="search-results__list">
 
-              <li>Products</li>
+              <li ng-if="suggestions.products">Products</li>
               <li ng-repeat="suggestion in suggestions.products" role="presentation">
                  <a href="/{{centre_id}}{{suggestion.url}}" target="_self" tabindex="-1">{{suggestion.description}}</a>
               </li>
 
-              <li>Stores</li>
+              <li ng-if="suggestions.stores">Stores</li>
               <li ng-repeat="suggestion in suggestions.stores" role="presentation">
                 <a href="/{{centre_id}}{{suggestion.url}}" target="_self" tabindex="-1">{{suggestion.description}}</a>
               </li>
