WSF-5382: Fix up ".txt-break-word" for Firefox

--- a/app/assets/stylesheets/partials/helpers/_text.scss
+++ b/app/assets/stylesheets/partials/helpers/_text.scss
@@ -51,3 +51,12 @@
 	/* Note: 'layout' is needed for IE. */
 	/* Note: `table-layout: fixed;` is needen when this is used within tables, the rule needs to go on the `table` element. */
 }
+
+/* Firefox */
+@include target-mozilla {
+  /* Need to set `word-wrap` and `word-break` in order to have hyphens working */
+  .txt-break-word {
+    word-wrap: normal !important;
+    word-break: normal !important;
+  }
+}
