--- a/app/views/shared/_footer_promo_tiles.html.erb
+++ b/app/views/shared/_footer_promo_tiles.html.erb
@@ -1,5 +1,5 @@
 <footer class="grid grid--gutter-dbl">
-  <% [left, right].each do |promo| %>
+  <% [col_left, col_right].each do |promo| %>
     <div class="grid__item non-palm-one-half">
       <%# Promo tile %>
       <div class="promo-tile box">
