--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -204,7 +204,7 @@
             top: 50%;
             left: 50%;
             @include translate(-50%, -50%);
-            @include font-size(24, 1);
+            @include font-size($font-size-xlrg, 1);
 
             @include respond-min($non-palm) {
               @include font-size($font-size-kilo, 1);
