--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -31,7 +31,7 @@
   /* The main icon of the tile that sits above the text */
   .promo-tile__icon:before {
     @include to-rem(padding, $spacing-third);
-    @include font-size(24, 1);
+    @include font-size($font-size-xlrg, 1);
     @include to-rem(margin-top, -20);
     background-color: #fff;
     border-radius: 100%;
