--- a/app/assets/stylesheets/partials/modules/_txt-formatted.scss
+++ b/app/assets/stylesheets/partials/modules/_txt-formatted.scss
@@ -59,7 +59,7 @@ body .txt-formatted {
 
     /* Increase text size at this breakpoint */
     @include respond-min($non-palm) {
-      @include font-size(24, 1.5);
+      @include font-size($font-size-xlrg, 1.5);
     }
   }
 
