--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -64,7 +64,7 @@
 
     <%# Store link %>
     <div class="island island--center detail-view__divider--palm">
-      <%= link_to @product.primary_retailer_product_url || '#',
+      <%= link_to @product_tracking_url || '#', target: "_blank",
         class: "btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg btn--main-flanked", rel: "external nofollow" do %>
         <span class="txt-truncate">Buy from <%= @product.retail_chain_name %></span>
         <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
