Fix images and promo tiles

--- a/app/views/centre_info/_footer.html.erb
+++ b/app/views/centre_info/_footer.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/footer_promo_tiles", 
-  col_left: {
+  promo_tile_1: {
     image_src: "promo-tiles/promo-tile-01.jpg",
     icon: "icon--hours",
     heading: "Shopping Hours",
@@ -7,7 +7,7 @@
     link_text: "View Shopping Hours",
     link_url: centre_hours_path(@centre)
   },
-  col_right: {
+  promo_tile_2: {
     image_src: "promo-tiles/promo-tile-02.jpg",
     icon: "icon--service",
     heading: "Centre Services",
