Replacing link icon with shopping bag icon for product store click out link - WSF-5570

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -170,6 +170,9 @@
 /* Play */
 .icon--play:before {content: "\e038";}
 
+/* Bag */
+.icon--bag:before {content: "\e036";}
+
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
 
