--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -68,7 +68,7 @@
         class: "btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg btn--main-flanked", rel: "external nofollow" do %>
         <span class="txt-truncate">Buy from <%= @product.retail_chain_name %></span>
         <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
-        <span class="icon icon--link icon--xlrg icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
+        <span class="icon icon--bag icon--xlrg icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
       <%- end -%>
     </div>
     <%# //Store link %>
