--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -55,6 +55,13 @@
         <li><%= link_to category.name, url_for(:controller => params[:controller], :action => params[:action], :params => {category.url_args.keys.first => category.url_args.values.first}) %></li>
       <% end %>
     </ul>
+
+    <h2>Brands at Westfield</h2>
+    <ul>
+      <% @brands.each do |brand| %>
+        <li><%= link_to brand.name, url_for(:controller => params[:controller], :action => params[:action], :params => {brand: brand.code}) %></li>
+      <% end %>
+    </ul>
   </nav>
 </noscript>
 <%# //Expose Product categories for non JS users %>
