Added mrg-base class to the category ul

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -50,7 +50,7 @@
 <noscript>
   <nav role="navigation" class="island box mrg-base--top">
     <h2>Product categories</h2>
-    <ul>
+    <ul class="mrg-base">
       <% @categories.each do |category| %>
         <li><%= link_to category.name, url_for(:controller => params[:controller], :action => params[:action], :params => {category.url_args.keys.first => category.url_args.values.first}) %></li>
       <% end %>
