--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,6 +1,7 @@
 <div class="tile__image">
   <% if result.cloudinary_public_id %>
-    <%= cl_image_tag result.cloudinary_public_id, {
+    <%# FIXME There is something causing some images in beta not to load if the cl_image_tag is used here %>
+    <%= fetch_image_tag result.cloudinary_public_id, {
         'data-height' => result.image_height,
         format: 'jpg',
         alt: "Photo of product: #{result.title}",
